Adjust spacing on dialogs.