@@ -16,6 +16,10 @@ title: Version 1.10 > Minor
 This changelog will contain all changes from 1.10.0 onwards before the next major version.
 !!!
 
+==- Version 1.10.42
+Fix dialog translations.
+Add a note when translating.
+[!badge variant="dark" text="Tumppi066"] [!badge variant="ghost" text="MainUI"]
 ==- Version 1.10.41
 Adjust dialog spacing.
 [!badge variant="dark" text="Tumppi066"] [!badge variant="ghost" text="MainUI"]
